# Zaephus_Math

./: .gitignore  CMakeLists.txt  LICENSE  Math.h  MathHelper.h  Quaternion.h
Vectors/: Vector4Int.h
include/: Math.h  Quaternion.cpp  Quaternion.h
include/Matrices/: Matrix2x2.cpp  Matrix2x2.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h
include/Vectors/: Vector2.cpp  Vector2.h  Vector2Int.cpp  Vector2Int.h  Vector3.cpp  Vector3.h  Vector3Int.cpp  Vector3Int.h  Vector4.cpp  Vector4.h  Vector4Int.cpp  Vector4Int.h
source/: CMakeLists.txt  Quaternion.cpp  Quaternion.h  ZMath.h
source/Matrices/: Matrix2x2.cpp  Matrix2x2.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h
source/Vectors/: Vector2.cpp  Vector2.h  Vector2Int.cpp  Vector2Int.h  Vector3.cpp  Vector3.h  Vector3Int.cpp  Vector3Int.h  Vector4.cpp  Vector4.h  Vector4Int.cpp  Vector4Int.h
tests/: CMakeLists.txt  QuaternionTest.h  TestHelper.h  Time.h  main.cpp
tests/Vectors/: Vec3Test.h
